# o2

./: .gitignore  CMakeLists.txt  Front-end_Files  FrontEndFiles  LICENSE  README.md  RandomAlgorithm_PseudoCode.txt  TestEnvironment- Design.docx  build_script.sh  cpp.hint  sample.txt  static.cmake  ~$stEnvironment- Design.docx
BACK END/: build_script.sh  configure_script.sh
BACKEND/: build_script.sh  build_script_mac.sh  build_script_win.bat  configure_script.sh
Front_end-Files/: O2_GUI  O2_GUI.java  O2_GUI_2_Testcases 2.java  O2_GUI_2_Testcases.java  ReportConsolidationUI.java
Frontend-Old/: O2_GUI.java  O2_GUI_2_Testcases.java  ReportConsolidationUI.java
Outputs/128.237.201.160/: arraytest.txt  dispatchtest.txt
TestHarness/: tests.txt
TestHarness/Inputs/: MachineConfiguration.txt  TestConfiguration.txt
TestHarness/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
TestHarnessUI/: MachineAllocation.txt  temp.sh  tests.txt
TestHarnessUI/nbproject/: project.properties
arduino/: README.md  README.md.backup  setupo2lite.bat  setupo2lite.bat~
demo/browser-to-soundcool/: README.txt  attributions.txt  scconfig.soundcool
demo/buttons/: README.md  buttons.htm  buttons.srp  o2ws.js  script.txt  synthctrl.srp
demo/esp32ctrl/: README.md
doc/: Doxyfile  bridge.txt  classes.txt  design.txt  logo.pptx  modular.txt  mqtt.txt  o2host-logo.pptx  o2host.txt  o2lite.txt  shmem_bridge_cleanup.pptx
doc/html/: classes.html  functions.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  globals_type.html  group__debugging.html  group__lowlevelmsg.html  group__lowlevelparse.html  group__returncodes.html  modules.html  o2_8h_source.html  o2__sched_8h_source.html  o2__search_8h_source.html  o2__send_8h_source.html  structenumerate.html  structgeneric__entry.html  structhandler__entry.html  structo2__sched.html  structosc__entry.html  structremote__service__entry.html
docs/: home.html  index.html
docs/html/: annotated.html  bridge_8h_source.html  class_bridge__info-members.html  class_bridge__info.html  class_bridge__protocol-members.html  class_bridge__protocol.html  class_enumerate-members.html  class_enumerate.html  class_fds__info-members.html  class_fds__info.html  class_handler__entry-members.html  class_handler__entry.html  class_hash__node-members.html  class_hash__node.html  class_http__conn-members.html  class_http__conn.html  class_http__reader-members.html  class_http__reader.html  class_http__server-members.html  class_http__server.html  class_m_q_t_t__info-members.html  class_m_q_t_t__info.html  class_m_q_t_tcomm-members.html  class_m_q_t_tcomm.html  class_net__address-members.html  class_net__address.html  class_net__interface-members.html  class_net__interface.html  class_o2___m_q_t_tcomm-members.html  class_o2___m_q_t_tcomm.html  class_o2lite__info-members.html  class_o2lite__info.html  class_o2lite__protocol-members.html  class_o2lite__protocol.html  class_o2node-members.html  class_o2node.html  class_o2obj-members.html  class_o2obj.html  class_o2queue-members.html  class_o2queue.html  (+148 more)
liblo-0.28/: Makefile  Makefile.in  config.h  config.h.in  config.status  configure  liblo.pc  libtool
liblo-0.28/doc/: Makefile  Makefile.in  reference.doxygen
liblo-0.28/examples/: Makefile  Makefile.in  cpp_example  example_client  example_server  example_tcp_echo_server  nonblocking_server_example
liblo-0.28/lo/: Makefile
liblo-0.28/src/: Makefile  Makefile.in  cpp_test  liblo.def  liblo.la  liblo_la-address.lo  liblo_la-blob.lo  liblo_la-bundle.lo  liblo_la-message.lo  liblo_la-method.lo  liblo_la-pattern_match.lo  liblo_la-send.lo  liblo_la-server.lo  liblo_la-server_thread.lo  liblo_la-timetag.lo  liblo_la-version.lo  subtest  test_bidirectional_tcp  testlo
o2host/: CMakeLists.txt  Info.plist.in  README.txt  fix_o2host_app.sh  libraries-example.txt  o2host.icns  o2host.sh
o2host/src/: configuration.cpp  configuration.h  confread.cpp  confread.h  fieldentry.cpp  fieldentry.h  midiservice.cpp  midiservice.h  o2host.cpp  o2host.h  o2oscservice.cpp  o2oscservice.h
o2host/test/: README.md
o2host/test/www/: buttons.htm  o2ws.js
o2litepy/: Makefile  README.txt  main.py  mylistener.py  o2lite-api.md  o2lite.py  o2liteavahi.py  o2litebonjour.py  o2litedisc.py  o2liteesp32.py  o2liteserv.py  o2litewin.py  o2lmsg.py  package.json
o2litepy/micropython/: uprun  wifiprefix.py
o2litepy/py3pkg/: LICENSE  README.md  pyproject.toml
o2litepy/src/: __init__.py  byte_swap.py  globals.py  ip_util.py  msg_parser.py  o2lite.py  o2lite_disc.py  o2lite_discovery.py  o2lite_handler.py  o2lite_msg.py  py3discovery.py  py3fns.py  upydiscovery.py  upyfns.py
pd/: CMakeLists.txt  Makefile  README.txt  am1-o2.pd  am2-o2.pd  design.txt  install_macos.sh  o2-help.pd  o2ensemble.c  o2ensemble.h  o2pd.c  o2pd.h  o2property.c  o2receive.c  o2send.c  timeo2.pd
preproc/: o2idc.py
server/: make_cmdline_app.sh
src/: atomic.c  atomic.cpp  atomic.h  bridge.c  bridge.cpp  bridge.h  clock.c  clock.cpp  clock.h  debug.c  debug.cpp  debug.h  discovery.c  discovery.cpp  discovery.h  dynarray.c  dynarray.cpp  dynarray.h  hashnode.c  hashnode.cpp  hashnode.h  hostip.c  hostip.h  hostipimpl.h  message.c  message.cpp  message.h  mqtt.c  mqtt.cpp  mqtt.h  mqttcom2.h  mqttcomm.c  mqttcomm.cpp  mqttcomm.h  msgprint.c  msgprint.cpp  msgsend.c  msgsend.cpp  msgsend.h  network.c  (+92 more)
test/: O2_NOSERVICE_bundletest.c  O2_NOT_INITIALIZED_o2_tap.c  O2_NOT_INITIALIZED_o2_tapperornew.c  README.txt  appfollow.c  appfollow.cpp  applead.c  applead.cpp  appmaster.c  appslave.c  arduinodisc.ino  arraytest.c  arraytest.cpp  bridgeapi.c  bridgeapi.cpp  broadcastclient.c  broadcastclient.cpp  broadcastclient2.cpp  broadcastserver.c  broadcastserver.cpp  bundletest.c  bundletest.cpp  checkports.py  clockmaster.c  clockmirror.c  clockmirror.cpp  clockref.c  clockref.cpp  clockslave.c  cmtio.cpp  coercetest.c  coercetest.cpp  dispatchtest.c  dispatchtest.cpp  dropclient.c  dropclient.cpp  dropserver.c  dropserver.cpp  hubclient.c  hubclient.cpp  (+142 more)
(+217 files in other folders)
